--- a/style.css
+++ b/style.css
@@ -1,20 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-.center {
-    margin: auto;
-    width: 60%;
-    border:3px solid #8AC007;
-    padding: 10px;
+@charset "UTF-8";
+
+@font-face { font-family: VCR_OSD_MONO_1.001; src: url('mchangxe.github.io/VCR_OSD_MONO_1.001.ttf'); } 
+p{
+	color:white;
+	font:VCR_OSD_MONO_1.001;
+	text-align:center; 
+	font-size:140%;
+
 }
-</style>
-</head>
-<body>
-
-<div class="center">
-  <p><b>Note: </b>Using margin:auto will not work in IE8, unless a !DOCTYPE is declared.</p>
-</div>
-
-</body>
-</html>
