--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @font-face { 
 
 	font-family: myFirstFont; 
-	src: url(mchangxe.github.io/VCR_OSD_MONO_1.001.ttf); 
+	src: url('mchangxe.github.io/VCR_OSD_MONO_1.001.ttf'); 
 
 } 
 p{
