--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
 @font-face { 
 
 	font-family: myFirstFont; 
-	src:url('VCR_OSD_MONO_1.001.ttf'); 
+	src:url('VCR.ttf'); 
 
 } 
 p{
 	color:white;
-	font:VCR_OSD_MONO_1.001;
+	font-family: myFirstFont;
 	text-align:center; 
 	font-size:140%;
 	vertical-align: middle;
