--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 	font-family: myFirstFont; 
 	src:url('vcr.ttf'); 
-
+	;
 } 
 
 p{
@@ -13,5 +13,7 @@ p{
 	text-align:center; 
 	font-size:140%;
 	vertical-align: middle;
+	margin-top:240px;
+	line-height: 50px;
 
 }
